--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,13 @@
 [build-system]
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
+
 [tool.setuptools]
 packages = ["spectHR"]
+
 [project]
 name = "spectHR"
-version = "0.1.0"
+version = "0.1.1b"
 description = "HRApp: An Interactive Heart Rate Variability (HRV) Analysis Tool"
 readme = "README.md"
 license = {text = "GPL-2.0-only"}
