--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "spectHR"
-version = "0.1.2c"
+version = "0.1.3"
 description = "HRApp: An Interactive Heart Rate Variability (HRV) Analysis Tool"
 authors = ["Mark Span <m.m.span@rug.nl>"]
 license = "GPL-2.0-only"
@@ -78,7 +78,7 @@ version_file = "_version.py"
 [project.urls]
 Homepage = "https://github.com/MarkSpan/spectHR"
 
-[project.entry-points.console_scripts]
+[tool.poetry.plugins."console_scripts"]
 install-spectHR-notebooks = "spectHR.install_notebook:install_notebook"
 
 [build-system]
