--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -3,27 +3,21 @@ channels:
   - conda-forge
   - anaconda
 dependencies:
-  - conda
-  - conda-pack
   - ipython
   - ipympl
   - ipyvuetify
   - ipywidgets
-  - jupyter>=1.0
-  - jupyterlab>=4.0.0
-  - matplotlib>=3.1.2
+  - jupyter
+  - jupyterlab
+  - matplotlib
   - mplcursors
-  - numpy>=1.17
+  - numpy
   - pandas
   - pip
-  - pillow>=6.2
-  - python>=3.10
-  - scipy>=1.3.2
+  - pillow
+  - python
+  - scipy
   - voila
   - voila-gridstack
   - seaborn
   - wheel
-  - nb_conda_kernels
-  - pip:
-    - spectHR >=0.1.10
-    - jupytercontrib>=0.0.7
