--- a/binder/Dockerfile
+++ b/binder/Dockerfile
@@ -2,7 +2,8 @@ FROM jusher/jupyterlab-minimalist:latest
 
 # install the notebook package
 RUN pip install --no-cache --upgrade pip && \
-    pip install --no-cache notebook jupyterlab
+    pip install --no-cache notebook jupyterlab && \
+	pip install spectHR
 
 # create user with a home directory
 ARG NB_USER
