--- a/binder/Dockerfile
+++ b/binder/Dockerfile
@@ -1,40 +1,17 @@
-# Use the Jupyter Docker stack foundation as the base image
-FROM jupyter/docker-stacks-foundation:latest
+FROM python:3.7-slim
+# install the notebook package
+RUN pip install --no-cache --upgrade pip && \
+    pip install --no-cache notebook
 
-# Define arguments for the user and UID
-ARG NB_USER=jovyan
-ARG NB_UID=1000
-
-# Switch to the root user to create the user and set the home directory if it doesn't exist
-USER root
-RUN if ! id -u $NB_USER >/dev/null 2>&1; then \
-        addgroup --gid $NB_UID $NB_USER && \
-        adduser --disabled-password --gecos "" --ingroup $NB_USER --uid $NB_UID $NB_USER && \
-        mkdir -p /home/$NB_USER && \
-        chown $NB_USER:$NB_USER /home/$NB_USER; \
-    fi
-
-# Install git
-RUN apt-get update && apt-get install -y git
-
-# Set environment variables for the user and home directory
+# create user with a home directory
+ARG NB_USER
+ARG NB_UID
 ENV USER ${NB_USER}
 ENV HOME /home/${NB_USER}
 
-# Set the working directory to the user's home directory
+RUN adduser --disabled-password \
+    --gecos "Default user" \
+    --uid ${NB_UID} \
+    ${NB_USER}
 WORKDIR ${HOME}
-
-# Switch to the newly created user
 USER ${USER}
-
-# Expose the JupyterLab port
-EXPOSE 8888
-
-# Install spectHR from a specific GitHub repository
-RUN pip install git+https://github.com/markspan/spectHR.git
-
-# Alternatively, install spectHR from PyPI (uncomment if needed)
-# RUN pip install spectHR
-
-# Start JupyterLab
-CMD ["jupyter", "lab", "--ip=0.0.0.0", "--port=8888", "--no-browser", "--allow-root", "--NotebookApp.token=''"]
