--- a/binder/Dockerfile
+++ b/binder/Dockerfile
@@ -16,7 +16,7 @@ RUN if ! id -u $NB_USER >/dev/null 2>&1; then \
 
 # Install git and jupyterhub
 RUN apt-get update && apt-get install -y git && \
-    pip install jupyterhub
+    pip install jupyterhub jupyterlab
 
 # Set environment variables for the user and home directory
 ENV USER ${NB_USER}
